Fix scroll on mobile when dropdown is open

--- a/src/WebHeader/WebHeader.styl
+++ b/src/WebHeader/WebHeader.styl
@@ -94,3 +94,6 @@
 
       + .btn
         margin-left 18px
+
+.overflow
+  overflow hidden
